Fix: adjust padding and overflow for testimonios slider for better layout

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -153,7 +153,13 @@ html {
    TESTIMONIOS SLIDER
    ============================================ */
 .testimoniosSwiper {
-    padding: 30px 0 50px 0;
+    padding: 30px 0 50px 0 !important;
+    overflow: visible;
+}
+
+.testimoniosSwiper .swiper {
+    padding-top: 20px;
+    padding-bottom: 3px;
     overflow: visible;
 }
 
